argocd/internal/langfuse/resources/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: langfuse-virtualservice
  namespace: ai
spec:
  hosts:
    - langfuse.willyhu.tw
  gateways:
    - langfuse-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: langfuse
            port:
              number: 3000
